[package]
name = "logic-vec"
version = "0.1.0"
authors = ["azarmadr <azarshaik454@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "bm"
harness = false

[[bench]]
name = "res"
harness = false

[[bench]]
name = "not"
harness = false

[[bench]]
name = "and"
harness = false

[[bench]]
name = "or"
harness = false

[[bench]]
name = "xor"
harness = false
